--- a/Titanic/Titanic.ipynb
+++ b/Titanic/Titanic.ipynb
@@ -28,7 +28,7 @@
     "from sklearn import metrics, tree \n",
     "from matplotlib import pyplot as plt\n",
     "\n",
-    "from sklearn.model_selection import KFold, cross_val_score, GridSearchCV, RandomizedSearchCV"
+    "from sklearn.model_selection import StratifiedKFold, cross_val_score, GridSearchCV, RandomizedSearchCV"
    ]
   },
   {
@@ -56,7 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cv_strategy_KFold = KFold(n_splits=5, random_state=0)"
+    "cv_strategy_KFold = StratifiedKFold(n_splits=5, shuffle=True, random_state=0)"
    ]
   },
   {
@@ -1424,7 +1424,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x2656cbf6da0>"
+       "<seaborn.axisgrid.PairGrid at 0x1e0e3913898>"
       ]
      },
      "execution_count": 26,
@@ -1635,27 +1635,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([0.65734266, 0.55944056, 0.73943662, 0.76056338, 0.8028169 ])"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.7254902  0.69491525 0.63076923 0.67307692 0.6       ]\n",
+      "0.6648503208323746\n"
+     ]
     }
    ],
    "source": [
-    "DTC_scoring"
+    "print(DTC_scoring)\n",
+    "print(DTC_scoring.mean())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1664,27 +1663,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([0.46153846, 0.58823529, 0.73214286, 0.75      , 0.72881356])"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.7254902  0.69491525 0.63076923 0.67307692 0.6       ]\n",
+      "0.6648503208323746\n"
+     ]
     }
    ],
    "source": [
-    "DTC_scoring"
+    "print(DTC_scoring)\n",
+    "print(DTC_scoring.mean())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1693,22 +1691,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([0.68181818, 0.15151515, 0.65079365, 0.65      , 0.78181818])"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.63793103 0.70689655 0.71929825 0.61403509 0.67241379]\n",
+      "0.6701149425287357\n"
+     ]
     }
    ],
    "source": [
-    "DTC_scoring"
+    "print(DTC_scoring)\n",
+    "print(DTC_scoring.mean())"
    ]
   },
   {
@@ -1720,7 +1717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1729,7 +1726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1742,7 +1739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1751,7 +1748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1761,7 +1758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1770,7 +1767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1780,7 +1777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1804,7 +1801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1813,7 +1810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -1830,7 +1827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1839,7 +1836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -1855,7 +1852,7 @@
        "                       warm_start=False)"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1866,7 +1863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -1889,7 +1886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1906,7 +1903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1915,14 +1912,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 4.3 s\n"
+      "Wall time: 4.14 s\n"
      ]
     }
    ],
@@ -1938,7 +1935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 64,
    "metadata": {
     "scrolled": true
    },
@@ -1968,7 +1965,7 @@
        "        [0.71848739, 0.78059072, 0.82700422]])"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1979,16 +1976,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x26570f0ce80>"
+       "<matplotlib.legend.Legend at 0x1e0e7c8a0f0>"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2016,7 +2013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -2032,7 +2029,7 @@
        "                       warm_start=False)"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2044,7 +2041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 67,
    "metadata": {
     "scrolled": true
    },
@@ -2069,7 +2066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2093,7 +2090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2102,14 +2099,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 9.38 s\n"
+      "Wall time: 8.13 s\n"
      ]
     }
    ],
@@ -2125,7 +2122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -2153,7 +2150,7 @@
        "        [0.71848739, 0.78059072, 0.82700422]])"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2164,7 +2161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 72,
    "metadata": {
     "scrolled": true
    },
@@ -2172,10 +2169,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x265710b4e48>"
+       "<matplotlib.legend.Legend at 0x1e0e7e5deb8>"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2204,7 +2201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2213,7 +2210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -2228,7 +2225,7 @@
        "              silent=None, subsample=1, verbosity=1)"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2239,7 +2236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -2262,7 +2259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2286,7 +2283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2295,7 +2292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2305,15 +2302,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0:\tlearn: 0.5099252\ttotal: 184ms\tremaining: 184ms\n",
-      "1:\tlearn: 0.4605179\ttotal: 189ms\tremaining: 0us\n"
+      "0:\tlearn: 0.5099252\ttotal: 102ms\tremaining: 102ms\n",
+      "1:\tlearn: 0.4605179\ttotal: 106ms\tremaining: 0us\n"
      ]
     }
    ],
@@ -2331,7 +2328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -2352,7 +2349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2366,6 +2363,13 @@
     "#answer_CAT.head()\n",
     "#!cat predictedTitanicCAT.csv"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
